# fullcycle-python-catalogo-videos

./: .gitignore  .pylintrc  Dockerfile  README.md  api.http  docker-compose.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/zsh/powerlevel10k/: .p10k.zsh
src/__seedwork/application/: dto.py
src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/__seedwork/tests/integration/domain/: test_int_validators.py
src/__seedwork/tests/unit/application/: test_unit_dto.py  test_use_cases.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  test_unit_value_objects.py
src/category/application/: dto.py  use_cases.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/infra/: repositories.py
src/category/tests/integration/domain/: test_int_entities.py
src/category/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/category/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py
src/category/tests/unit/infra/: test_unit_repository.py
src/core/__seedwork/application/: dto.py
src/core/__seedwork/domain/: entities.py  exceptions.py  repositories.py  value_objects.py
src/core/__seedwork/tests/integration/domain/: test_int_validators.py
src/core/__seedwork/tests/unit/application/: test_unit_dto.py  test_use_cases.py
src/core/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  test_unit_value_objects.py
src/core/category/application/: dto.py  use_cases.py
src/core/category/domain/: entities.py  repositories.py  validators.py
src/core/category/infra/: serializers.py
src/core/category/infra/django/: models.py
src/core/category/infra/django/migrations/: 0001_initial.py
src/core/category/infra/django_app/: api.py  mappers.py  models.py  repositories.py  urls.py
src/core/category/infra/django_app/migrations/: 0001_initial.py
src/core/category/infra/in_memory/: repositories.py
src/core/category/tests/fixture/: categories_api_fixture.py
src/core/category/tests/integration/application/: test_int_use_cases.py
src/core/category/tests/integration/domain/: test_int_entities.py
src/core/category/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/core/category/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py
src/django_app/: __init__.py  container.py  settings.py  urls.py
(+7 files in other folders)
