[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jefferson Fragoso de Souza", email = "jefferson.fragoso@pgmais.com.br"},
]
dependencies = [
    "autopep8>=2.0.2",
]
requires-python = ">=3.10.2"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.7.0",
    "pylint>=2.15.3",
    "pytest>=7.4.0",
]
